fix: Update lang-switcher z-index

--- a/wp/wp-content/themes/lgm2018/sass/blocks/_lang-switcher.sass
+++ b/wp/wp-content/themes/lgm2018/sass/blocks/_lang-switcher.sass
@@ -8,3 +8,4 @@
   font-size: .9em
   font-weight: bold
   +appearance(none)
+  z-index: 10000
