--- a/wp/wp-content/themes/lgm2018/style.css
+++ b/wp/wp-content/themes/lgm2018/style.css
@@ -989,6 +989,7 @@ footer#colophon:after {
   font-weight: bold;
   -moz-appearance: none;
   -webkit-appearance: none;
+  z-index: 10000;
 }
 
 @media screen and (min-width: 768px) {
